Edited wiki page through web user interface.

--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -9,6 +9,7 @@ Types of site for which we have scrapers written
   * FastWeb
   * PublicAccess
   * PlanningExplorer
+  * RutlandLike (the ones that look like the Rutland site)
 
 Others:
 
