--- a/wiki/PlanningAuthoritiesC.wiki
+++ b/wiki/PlanningAuthoritiesC.wiki
@@ -40,4 +40,4 @@
 ||  || Crawley Borough Council || Crawley || searchable by date received || http://www.crawley.gov.uk/stellent/idcplg?IdcService=SS_GET_PAGE&nodeId=560 ||
 ||  || Crewe and Nantwich Borough Council || Crewe and Nantwich || PlanningExplorer || http://portal.crewe-nantwich.gov.uk/MVM/Online/PL/GeneralSearch.aspx ||
 || Done || Croydon (London Borough of ) || Croydon || AcolNet || http://planning.croydon.gov.uk/DCWebPages/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.pgesearch ||
-||  || Cumbria County Council || Cumbria || searchable by date || http://217.114.50.149:7778/ePlanning/searchPageLoad.do ||
+|| Done || Cumbria County Council || Cumbria || AtriumePlanning || http://217.114.50.149:7778/ePlanning/searchPageLoad.do ||
