Edited wiki page through web user interface.

--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -10,6 +10,7 @@ Types of site for which we have scrapers written
   * PublicAccess
   * PlanningExplorer
   * RutlandLike (the ones that look like the Rutland site)
+  * AtriumePlanning
 
 Others:
 
