Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesB.wiki
+++ b/wiki/PlanningAuthoritiesB.wiki
@@ -27,7 +27,7 @@
 || || *Breckland* || Breckland District Council || search page with nothing useful, but also weekly lists in html || http://wplan01.intranet.breckland.gov.uk:7778/portal/page?_pageid=33,30970&_dad=portal&_schema=PORTAL ||
 || || *Brent* || Brent Borough Council || search by date || http://www.brent.gov.uk/servlet/ep.ext?extId=101149&byPeriod=Y&st=PL&periodUnits=day&periodMultiples=14 ||
 || || *Brentwood* || Brentwood Borough Council || weekly lists as pdf || http://www.brentwood-council.gov.uk/index.php?cid=573 ||
-|| || *Bridgend* || Bridgend County Borough Council || searchable by date, but looks unlikely to work || http://www.bridgend.gov.uk/english/planningportal.asp ||
+|| || *Bridgend* || Bridgend County Borough Council || searchable by date || http://www.bridgend.gov.uk/english/planningportal.asp ||
 || In progress || *Bridgnorth* || Bridgnorth District Council || AcolNet || http://www2.bridgnorth-dc.gov.uk/planning/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.PgeApplications ||
 || || *Brighton* || Brighton & Hove Borough Council || searchable by date || http://www.brighton-hove.gov.uk/index.cfm?request=c1133441 ||
 || Done || Bristol || Bristol City Council || PublicAccess || http://e2eweb.bristol-city.gov.uk/publicaccess/default.aspx ||
