--- a/wiki/PossibleGroups.wiki
+++ b/wiki/PossibleGroups.wiki
@@ -3,3 +3,9 @@
 This page contains some groups of planning authorities for which we don't yet have a scraper (as far as I know), but which might be best handled together.
 
 PlanetApplicationEnquiry
+
+PlanIT (urls contain planning_search.aspx):
+  * Houndslow
+  * Kingston
+  * Richmond (London)
+  * Wiltshire
