--- a/wiki/PlanningAuthoritiesM.wiki
+++ b/wiki/PlanningAuthoritiesM.wiki
@@ -1,5 +1,5 @@
 ||  || Macclesfield Borough Council || Macclesfield || searchable by date || http://www.planportal.macclesfield.gov.uk/swiftlg/apas/run/wphappcriteria.display ||
-||  || Maidstone Borough Council || Maidstone || eplanning searchable by date || http://www.digitalmaidstone.co.uk/digitalmaidstone/Default.aspx?page=4262 ||
+||  || Maidstone Borough Council || Maidstone || searchable by date || http://digitalmaidstone.co.uk/swiftlg/apas/run/wphappcriteria.display ||
 ||  || Maldon District Council || Maldon || searchable by date || http://forms.maldon.gov.uk:8080/PlanApp/jsp/searchPlan.jsp ||
 || Done || Malvern Hills District Council || Malvern || PublicAccess || ||
 || Done || Manchester City Council || Manchester || PublicAccess || http://www.publicaccess.manchester.gov.uk/publicaccess/tdc/tdc_home.aspx ||
