Edited wiki page through web user interface.

--- a/wiki/ExistingScrapers.wiki
+++ b/wiki/ExistingScrapers.wiki
@@ -34,6 +34,7 @@ Sites that look like East Hertfordshire:
   * Gwynedd
   * Lake District National Park
   * Macclesfield
+  * Maidstone
   * Mole Valley
   * Pembrokeshire County Council
   * Rochdale
