--- a/wiki/PossibleGroups.wiki
+++ b/wiki/PossibleGroups.wiki
@@ -9,3 +9,6 @@ PlanIT (urls contain planning_search.aspx):
   * Kingston
   * Richmond (London)
   * Wiltshire
+
+Is there a group with urls like this?
+http://sun11.nelincs.gov.uk/portal/page?_pageid=256,32885&_dad=portal&_schema=PORTAL
