Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesW.wiki
+++ b/wiki/PlanningAuthoritiesW.wiki
@@ -29,7 +29,7 @@
 ||  || Wigan Metropolitan Borough Council || Wigan || searchable by date received || http://kinnear.wigan.gov.uk/planapps/PlanAppsAppSearch.asp ||
 ||  || Wiltshire County Council || Trowbridge || plan-IT: searchable by date || http://www.wiltshireplanningapplications.co.uk/planning_search.aspx ||
 || Ready || Winchester City Council || Winchester || PublicAccess || http://win2padmz.winchester.gov.uk/publicaccess/ ||
-||  || Windsor & Maidenhead Borough Council || Maidenhead, Windsor || PAM - searchable by date || http://www.rbwm.gov.uk/pam/search.jsp ||
+||  || Windsor & Maidenhead Borough Council || Maidenhead, Windsor || PAM - searchable by date. Database appears to be empty || http://www.rbwm.gov.uk/pam/search.jsp ||
 ||  || Wirral Metropolitan Borough Council || Wallasey || possible to ignore applications before a date || http://www.wirral.gov.uk/planning/search1.asp ||
 || Done || Woking Borough Council || Woking || PublicAccess || http://caps.woking.gov.uk/publicaccess/ ||
 ||  || Wokingham District Council || Hurst, Wokingham || Apps can be displayed in html by month || http://www.wokingham.gov.uk/environment/planning/planning-applications/planning-applications-search ||
