--- a/wiki/PlanningAuthoritiesP.wiki
+++ b/wiki/PlanningAuthoritiesP.wiki
@@ -3,7 +3,7 @@
 || || Pembrokeshire County Council || Haverfordwest || searchable by date || http://planning.pembrokeshire.gov.uk/swiftlg/apas/run/wphappcriteria.display ||
 || || Pendle Borough Council || Nelson || interactive planning - searchable by date || http://bopdoccip.pendle.gov.uk/PlanApp/jsp/searchPlan.jsp ||
 || || Penwith District Council || Penzance || planning applications organised by year (in html) || http://www.penwith.gov.uk/index.cfm?articleid=7088 ||
-|| Ready || Perth & Kinross Council || Perth || PublicAccess || http://193.63.61.22/publicaccess/ ||
+|| Done || Perth & Kinross Council || Perth || PublicAccess || http://193.63.61.22/publicaccess/ ||
 || Done || Peterborough City Council || Peterborough || PublicAccess || ||
 || || Plymouth City Council || Plymouth || searchable by date || http://www.plymouth.gov.uk/planningonline?innoLink=http://www.plymouth.gov.uk/planningapplications2/search.asp ||
 || || Poole Borough Council || Poole || weekly lists || http://wam.boroughofpoole.com/WAM/search/pas/index.htm ||
