Edited wiki page through web user interface.

--- a/wiki/PlanningAuthoritiesP.wiki
+++ b/wiki/PlanningAuthoritiesP.wiki
@@ -10,4 +10,4 @@
 || Done || Portsmouth City Council || Portsmouth || PublicAccess || 
 || || Powys County Council || Brecon, Llandrindod Wells, Welshpool || very little of use. || http://www.powys.gov.uk/index.php?id=75 || 
 || || Preston City Council || Preston || weekly lists as pdf - hard to navigate|| http://www.preston.gov.uk/Category.asp?cat=1555 ||
-|| || Purbeck District Council || Wareham || broken link to online planning apps || http://www.purbeck.gov.uk/default.aspx?page=8714&menupage=7 ||
+|| || Purbeck District Council || Wareham || received since search || http://www.purbeck.gov.uk/planning/planappsrch.asp ||
