Edited wiki page through web user interface.

--- a/wiki/PossibleGroups.wiki
+++ b/wiki/PossibleGroups.wiki
@@ -15,5 +15,9 @@ http://sun11.nelincs.gov.uk/portal/page?_pageid=256,32885&_dad=portal&_schema=PO
 
 PAM:
 
-Windsor & Maidenhead Borough Council
-Peak District National Park Authority
+  * Windsor & Maidenhead Borough Council
+  * Peak District National Park Authority
+
+PlanAppSrch.asp:
+  * North Yorkshire
+  * Shropshire
