Edited wiki page through web user interface.

--- a/wiki/AtriumePlanning.wiki
+++ b/wiki/AtriumePlanning.wiki
@@ -8,6 +8,7 @@ Known sites of this sort are:
   * Dorset (The site is down as of 24/11/2007)
   * Lincolnshire
   * Somerset (I'm not sure this one still exists - 24/11/2007)
+  * Suffolk
   * West Sussex
 
 All of these are county council sites for councils which are only responsible for things like minerals, waste, and the council's own applications. This means that they tend to have fairly few applications.
