--- a/wiki/PlanningAuthoritiesU.wiki
+++ b/wiki/PlanningAuthoritiesU.wiki
@@ -1,1 +1,1 @@
-||  || Uttlesford District Council || Saffron Walden || site is down || http://www.uttlesford.gov.uk/planning/planning+applications+lists.htm ||
+||  || Uttlesford District Council || Saffron Walden || searchable by date accepted || http://www.uttlesford.gov.uk/planning/default7.htm ||
