--- a/wiki/PlanningExplorer.wiki
+++ b/wiki/PlanningExplorer.wiki
@@ -4,23 +4,23 @@ We have scrapers for a couple of these (Camden and Hackney)
 
   * Blackburn
   * Broadland (no postcodes)
-  * Camden - done
+  * Camden - done (has OSGB)
   * Charnwood
   * Crewe and Nantwich
   * East Staffordshire
   * Epping Forest
   * Forest Heath (no postcodes)
-  * Hackney - done
+  * Hackney - done (need paging)
   * Kennet
   * Lincoln (also WAM)
-  * Liverpool (not quite like the others)
+  * Liverpool
   * Merton (site down)
   * Shrewsbury (site is broken)
   * South Norfolk (appears to have WAM as well) (No postcodes - but has OSGB coords)
   * South Shropshire
   * South Tyneside
   * Stockport
-  * Swansea
+  * Swansea (site is broken)
   * Tamworth
   * Trafford (no postcodes)
   * Waltham Forest (currently giving an error)
