--- a/wiki/PlanningAuthoritiesB.wiki
+++ b/wiki/PlanningAuthoritiesB.wiki
@@ -13,7 +13,7 @@
 || Done || Bexley || Bexley Borough Council || PublicAccess ||http://publicaccess.bexley.gov.uk/publicaccess/tdc/tdc_home.aspx ||
 || || *Birmingham* ||Birmingham City Council || searchable by date || http://www.birmingham.gov.uk/GenerateContent?CONTENT_ITEM_ID=67548&CONTENT_ITEM_TYPE=0&MENU_ID=12189 ||
 || Done || Blaby || Blaby District Council || PublicAccess || http://www.blaby.gov.uk/PublicAccess ||
-|| || *Blackburn* || Blackburn with Darwen Borough Council || PlanningExplorer || http://195.8.175.6/MVM/Online/PL/GeneralSearch.aspx ||
+|| Done || Blackburn || Blackburn with Darwen Borough Council || PlanningExplorer || http://195.8.175.6/MVM/Online/PL/GeneralSearch.aspx ||
 || || *Blaenau Gwent* ||Blaenau Gwent County Borough Council || Apps by year in one big html page ||http://www.blaenau-gwent.gov.uk/environment/8380.asp ||
 || || *Blyth Valley* || Blyth Valley Borough Council || weekly lists as pdf, rather out of date || http://www.blythvalley.gov.uk/Default.aspx?page=10932 ||
 || Done || Bolsover || Bolsover District Council || PublicAccess || http://217.158.161.181/publicaccess/tdc/DcApplication/application_searchform.aspx ||
@@ -31,7 +31,7 @@
 || In progress || *Bridgnorth* || Bridgnorth District Council || AcolNet || http://www2.bridgnorth-dc.gov.uk/planning/acolnetcgi.gov?ACTION=UNWRAP&RIPNAME=Root.PgeApplications ||
 || || *Brighton* || Brighton & Hove Borough Council || searchable by date, note the extra link for tree applications || http://www.brighton-hove.gov.uk/index.cfm?request=c1133441 ||
 || Done || Bristol || Bristol City Council || PublicAccess || http://e2eweb.bristol-city.gov.uk/publicaccess/default.aspx ||
-|| || *Broadland* || Broadland District Council || PlanningExplorer || http://www.broadland.gov.uk/mvm/Online/PL/GeneralSearch.aspx ||
+|| Done || Broadland || Broadland District Council || PlanningExplorer - site has no postcodes || http://www.broadland.gov.uk/mvm/Online/PL/GeneralSearch.aspx ||
 || Done || Broads || Broads Authority || PublicAccess - using https || https://planning.broads-authority.gov.uk/PublicAccess/default.aspx ||
 || Done || Bromley || Bromley || PublicAccess || ||
 || || *Bromsgrove* || Bromsgrove District Council || pdf of year to date || http://bromsgrove.whub.org.uk/home/bdcindex/bdc-planning/bdc-planning-applications/bdc-planning-recent-applications.htm ||
